# sqlite-vtab-opendal

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: error.rs  lib.rs  types.rs
src/backends/: dropbox.rs  gdrive.rs  http.rs  local_fs.rs  mod.rs  postgresql.rs  s3.rs
src/vtab/: mod.rs
