[package]
name = "sqlite-vtable-opendal"
version = "0.1.0"
edition = "2021"
authors = ["Mukhtar <mukhtaronif@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "SQLite virtual tables for querying cloud object store metadata using OpenDAL"
repository = "https://github.com/mukhtaronif/1-sqlite-vtab-opendal"
documentation = "https://docs.rs/sqlite-vtable-opendal"
readme = "README.md"
keywords = ["sqlite", "virtual-table", "cloud-storage", "opendal", "s3"]
categories = ["database", "filesystem", "api-bindings"]

[lib]
name = "sqlite_vtable_opendal"
crate-type = ["lib", "cdylib"]

[dependencies]
# SQLite virtual table support
rusqlite = { version = "0.32.1", features = ["bundled-full", "vtab"] }

# OpenDAL for cloud storage abstraction
opendal = { version = "0.50.2", features = [
    "services-fs",
    "services-http",
    "services-s3",
    "services-dropbox",
] }

# Async runtime
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread"] }
futures-util = "0.3.30"
async-trait = "0.1.77"

# Error handling
anyhow = "1.0.75"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8.1"
tokio = { version = "1.34.0", features = ["full", "test-util"] }
criterion = "0.5"

# Examples and benchmarks will be added as we build them
# [[example]]
# [[bench]]

[profile.release]
lto = true
codegen-units = 1
